Fix iOS overflow hide bug

--- a/html/css/base.css
+++ b/html/css/base.css
@@ -6,10 +6,11 @@ html{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-size: 3vw;
+  font-size: 2.9vw;
 }
 body{
   -webkit-overflow-scrolling: touch;
+  overflow-x: visible !important;
 }
 
 @media screen
