--- a/html/css/tables.css
+++ b/html/css/tables.css
@@ -86,8 +86,8 @@ div[data-react-toolbox="dropdown"] ul{
   margin: 0; padding: 8px 0; outline: none;
 }
 div[data-react-toolbox="dropdown"] li{
-  padding: 0.8rem 1rem;
-  font-size: 1.2rem;
+  padding: 0.4rem 1rem;
+  font-size: 1.05rem;
 }
 
 div[data-react-toolbox="slider"] div[class*="theme__snap"]:after{
